[gd_scene load_steps=4 format=3 uid="uid://c1d4krljf0hr2"]

[ext_resource type="PackedScene" uid="uid://bk4jnfmvdr6ud" path="res://nodes/gui/buttons/button_plus/button_plus.tscn" id="1_jig7g"]
[ext_resource type="Script" path="res://nodes/gui/equip_cosmetic_button/equip_cosmetic_button.gd" id="2_dppxl"]
[ext_resource type="PackedScene" uid="uid://ca2lixrynn25b" path="res://nodes/gui_components/equip_cosmetic_controller/equip_cosmetic_controller.tscn" id="3_cu0xe"]

[node name="EquipCosmeticButton" node_paths=PackedStringArray("equip_cosmetic_controller") instance=ExtResource("1_jig7g")]
theme_type_variation = &"EquipCosmeticButton"
text = "Equip"
script = ExtResource("2_dppxl")
equip_cosmetic_controller = NodePath("EquipCosmeticController")

[node name="EquipCosmeticController" parent="." index="2" instance=ExtResource("3_cu0xe")]

[connection signal="pressed" from="." to="." method="_on_pressed"]
